# psych-articles

./: .env  .gitattributes  .gitignore  count_download_pdfs.sh  domain_samples.md  pyproject.toml
assets/: LAB.csv  semantic_papers.parquet  semantic_papers_all.parquet  semantic_papers_filtered.parquet
playground/: download.py  list_paper.py  s2_pydantic.py  stat.py
src/: downloader.py
src/api/: semantic.py
src/schema/: semantic.py  util.py
